[package]
name = "pprint"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Flexible and lightweight pretty printing library for Rust"
repository = "https://github.com/mkbabb/pprint"
readme = "README.md"
keywords = ["pretty", "printing", "rust"]
categories = ["text-processing", "development-tools"]

[lib]
name = "pprint"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.5.0"
pprint_derive = { path = "./derive", version = "0.1.0" }
regex = "1.10.5"

