[package]
name = "pprint"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Flexible and lightweight pretty printing library for Rust"
repository = "https://github.com/mkbabb/pprint"
readme = "README.md"
keywords = ["pretty", "printing", "rust"]
categories = ["text-processing", "development-tools"]

[lib]
name = "pprint"
path = "src/lib.rs"

[dependencies]
dragonbox = "0.1.8"
# itoa = "1.0.11"
itoa = { git = "https://github.com/mkbabb/itoa", version = "1.0.13" }
itoap = "1.0.1"
jemallocator = "0.5.4"
lazy_static = "1.5.0"
pprint_derive = { path = "./derive", version = "0.1.0" }
rand = "0.8.5"
regex = "1.10.5"
ryu = "1.0.18"

[profile.bench]
# opt-level = 0

