[package]
name = "pprint"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Flexible and lightweight pretty printing library for Rust"
repository = "https://github.com/mkbabb/pprint"
readme = "README.md"
keywords = ["pretty", "printing", "rust"]
categories = ["text-processing", "development-tools"]

[lib]
name = "pprint"
path = "src/lib.rs"

[dependencies]
dragonbox = "0.1.8"
itoap = "1.0.1"
pprint_derive = { path = "./derive", version = "0.1.0" }
regex = "1.11"

[dev-dependencies]
rand = "0.8"

[profile.bench]
# opt-level = 0
