[package]
name = "pprint_derive"
version = "0.1.0"
edition = "2021"
description = "A set of procedural macros for pprint"
license = "MIT"
repository = "https://github.com/mkbabb/pprint"


[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"
