[package]
name = "pprint_derive"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A set of procedural macros for pprint"
license = "MIT"
repository = "https://github.com/mkbabb/pprint"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
